--- a/roles/zeitgeist-node/tasks/validator.yml
+++ b/roles/zeitgeist-node/tasks/validator.yml
@@ -28,13 +28,20 @@
                         "--chain={{ chain }}",
                         "--base-path=/zeitgeist/data",
                         "--rpc-cors=all",
+                        "--state-cache-size=0",
                         "--listen-addr=/ip4/0.0.0.0/tcp/30333",
                         "--public-addr=/ip4/{{ ansible_default_ipv4.address }}/tcp/{{ p2p_listen }}",
                         "--pruning=archive",
                         "--collator",
+                        "--execution=wasm",
+                        "--no-mdns",
                         "--",
                         "--listen-addr=/ip4/0.0.0.0/tcp/30334",
                         "--public-addr=/ip4/{{ ansible_default_ipv4.address }}/tcp/{{ p2p_relay_listen }}",
+                        "--execution=wasm",
+                        "--pruning=1000",
+                        "--name={{ node_name }} - {{ chain }} relay",
+                        "--no-mdns"
                     ]
                 volumes:
                 - "{{ db_path }}:/zeitgeist/data"
