--- a/host_vars/my_node_validator1.yml
+++ b/host_vars/my_node_validator1.yml
@@ -3,7 +3,10 @@ node_name: 'MyNode-ZBS' # Change this!
 chain: battery_station
 docker_name: battery_station_mynode
 p2p_listen: 30333
+p2p_relay_listen: 30334
 # Keep these bound to 127.0.0.1 you otherwise expose the ports to the public!
-rpc_listen: 127.0.0.1:9933
-ws_listen: 127.0.0.1:9944
+rpc_listen: 9933
+rpc_relay_listen: 9934
+ws_listen: 9944
+ws_relay_listen: 9945
 db_path: '~/{{chain}}'
