Add collator key backup

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ roles/polkadot-claimer/files/wallet.json-polkadot
 roles/polkadot-claimer/files/wallet.json-kusama
 roles/polkadot-claimer/files/password-polkadot
 roles/polkadot-claimer/files/password-kusama
+
+backup/*
